# fortress

./: .gitignore  CMakeLists.txt
src/: board.f90  init.f90  magic.f90  main.f90  move.f90  perft.f90
